# aider

./: .gitignore  .pre-commit-config.yaml  aider.conf_gemini.yml
aider/: help.py  (+1 more)
standalone_rag_help/: .gitignore  LICENCE.txt  README.md  cli.py  download_analytics_docs.py  download_source_docs.py  llm_conversation.py  prompts.py  pyproject.toml  rag_core.py  requirements.in  requirements.txt
standalone_rag_help/tests/: test_help.py  test_llm_conversation.py  test_llm_conversation_integration.py
standalone_rag_help/training_data_aider/: metadata_map.csv
standalone_rag_help/training_data_zoho_analytics/: 6.0-beta.md  account-audit-logs.md  account-index.md  account-notifications.md  airtable.md  analyze-data.md  android-phones.md  android.md  anomaly-detection.md  askziabot-ms-teams.md  auto-analysis.md  backup.md  basicconcepts.md  blogs-feature-post.md  chart.md  cloud-database.md  cluster-analysis.md  connector.md  creating-reports.md  creator-report-tab.md  dashboard-customization.md  dashboard.md  dashboardsapp.md  data-alert.md  data-bucketing.md  data-merging.md  data-pipeline.md  data-snapshot.md  datastorytelling.md  dynamics-crm.md  email-settings.md  embedded-analytics-index.md  export.md  faq.md  feature-control.md  flatly.md  formatting.md  gdpr.md  geo-maps.md  getting-started.md  (+55 more)
standalone_rag_help/training_data_zoho_analytics/admin/: user-management.md  user-roles.md  users.md  viewer.md
standalone_rag_help/training_data_zoho_analytics/analyze-data/: aggregate-formula.md  aggregate-functions.md  create-metrics-formula.md  trendline.md
(+251 files in other folders)
